# infra-tester

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  apply_assertions.go  assertions.go  config.yaml  decoder.go  go.mod  go.sum  index.html  main.go  main_test.go  plan_assertions.go  schema.go  test.tf  validation.go
.github/workflows/: build_release_binaries.yml  publish_docs.yaml  run_test.yaml
apply_assertions/: index.html
assertions/: apply_assertions.go  custom_assertions.go  index.html
configuration/: index.html
css/: enhancements.css
docs/: mkdocs.yml
docs/docs/: apply_assertions.md  assertions.md  configuration.md  extending_infra_tester.md  index.md  infra_tester_internals.md  plan_assertions.md  test_output.md  writing_tests.md
example/: config.yaml  test.tf
example/plugin-example/: pyproject.toml
example/plugin-example/src/example/: __init__.py
extending_infra_tester/: index.html
infra_tester_internals/: index.html
plan_assertions/: index.html
plugins/: plugin_result.go  plugins.go
plugins/src/infra_tester_plugins/: __init__.py  assertion.py  cli.py  result.py
python-plugins/: pyproject.toml
search/: search_index.json
src/: go.mod  go.sum  main.go  main_test.go  schema.go  validation.go
src/assertions/: apply_assertions.go  assertions.go  custom_assertions.go  decoder.go  plan_assertions.go  utils.go
src/plugins/: plugin_manager.go  plugin_result.go  plugin_runner.go  plugins.go
test_output/: index.html
utils/: json.go
utils/cmd/: command_result.go  command_runner.go
writing_tests/: index.html
(+2 files in other folders)
